@@ -1,6 +1,7 @@
 Revision history for PostScript::Calendar
 
 0.06   NOT
+	- Document that passing ps_file => undef creates a new object
 	- Figured out how to avoid Latin-1 in POD (S<C<< >>> works correctly)
 
 0.05   March 15, 2010
